[package]
name = "cirq"
version = "0.1.0"
edition = "2024"

[dependencies]
rustc-hash = "2.1.1"
smallvec = "0.1.2"
compact_str = "0.9"
memchr = "2"
bumpalo = { version = "3", features = ["collections"] }
thin-vec = "0.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
